--- a/android-engineer.html
+++ b/android-engineer.html
@@ -177,7 +177,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999697764733-senior-android-engineer-blablalines'>BlaBlaCar Senior Android Engineer - BlaBlaLines | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999697764733-senior-android-engineer-blablalines'>BlaBlaCar Senior Android Engineer - BlaBlaLines | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -210,7 +210,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p>2 days ago ... Great communication and English skills; Great iOS or Android experience with 
 code to prove it; Javascript experience a plus; You know how to architect all?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tandemmoneylimited/jobs/4481420002'>Job Application for Android Engineer at Tandem Bank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tandemmoneylimited/jobs/4481420002'>Job Application for Android Engineer at Tandem Bank</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -226,7 +226,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Berlin, Germany  Australia Italy</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4460706002'>Job Application for  Android Engineering Team Lead - Store Pick at Ocado Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4460706002'>Job Application for  Android Engineering Team Lead - Store Pick at Ocado Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -289,7 +289,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">United States  NYC</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fueled/jobs/1909614'>Job Application for Senior Android Engineer at Fueled</a></h5> 
+<h5><a href='https://boards.greenhouse.io/fueled/jobs/1909614'>Job Application for Senior Android Engineer at Fueled</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -305,7 +305,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Minsk  Minsk Minsk</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999697169483-senior-android-engineer-ui-systems'>Square Senior Android Engineer, UI Systems | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999697169483-senior-android-engineer-ui-systems'>Square Senior Android Engineer, UI Systems | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -313,7 +313,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999697091104-senior-android-engineer'>Square Senior Android Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999697091104-senior-android-engineer'>Square Senior Android Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CAUnited States</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
@@ -435,7 +435,7 @@ work on innovative mobile projects that would impact tens of millions of people'
 <p><span class="badge badge-light">Taiwan</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://intellectsoft.workable.com/j/6112905D7F'>Intellectsoft - Jobs: Android Engineer - Apply online</a></h5> 
+<h5><a href='https://intellectsoft.workable.com/j/6112905D7F'>Intellectsoft - Jobs: Android Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Kyiv Kyiv city, Ukraine Palo Alto</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -455,7 +455,7 @@ work on innovative mobile projects that would impact tens of millions of people'
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tide.workable.com/j/F96C5174A7'>Tide - Jobs: Senior Android Engineer (3 month contract) - Apply online</a></h5> 
+<h5><a href='https://tide.workable.com/j/F96C5174A7'>Tide - Jobs: Senior Android Engineer (3 month contract) - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
