--- a/frontend.html
+++ b/frontend.html
@@ -66,7 +66,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vgs/c67a87f2-4f38-4292-af00-f4aeb29c2ab0'>Very Good Security - Frontend Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/vgs/c67a87f2-4f38-4292-af00-f4aeb29c2ab0'>Very Good Security - Frontend Engineer</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -102,7 +102,7 @@
 <p><span class="badge badge-light">New York City, NY</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Deezer/743999698356459-front-end-developer-content-team-internship-'>Deezer Front End Developer - Content Team (Internship) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Deezer/743999698356459-front-end-developer-content-team-internship-'>Deezer Front End Developer - Content Team (Internship) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -138,7 +138,7 @@
 <p><span class="badge badge-light">Charlotte, NC  Charlotte</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/umlaut/job/oukrbfwa'>umlaut North America Careers - Front-End Web Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/umlaut/job/oukrbfwa'>umlaut North America Careers - Front-End Web Developer</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -154,7 +154,7 @@
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4499059002'>Job Application for Senior Front-end Engineer at SoundHound Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4499059002'>Job Application for Senior Front-end Engineer at SoundHound Inc.</a></h5> 
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -180,7 +180,7 @@
 <p><span class="badge badge-light">North America North America</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/internetbrands/job/oaPmbfwg'>Internet Brands Careers - Front End Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/internetbrands/job/oaPmbfwg'>Internet Brands Careers - Front End Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -212,7 +212,7 @@
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698331465-front-end-developer'>Bey Front End Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698331465-front-end-developer'>Bey Front End Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -240,7 +240,7 @@
 <p><span class="badge badge-light">Mumbai Chennai, India</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://maxcluster.join.com/jobs/463371-ui-ux-frontend-designer-m-w-d'>Job @ maxcluster (Paderborn): UI/UX Frontend Desig... | JOIN</a></h5> 
+<h5><a href='https://maxcluster.join.com/jobs/463371-ui-ux-frontend-designer-m-w-d'>Job @ maxcluster (Paderborn): UI/UX Frontend Desig... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -396,7 +396,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241803-frontend-developer-junior-mid-'>Netcentric Frontend Developer (Junior-Mid) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241803-frontend-developer-junior-mid-'>Netcentric Frontend Developer (Junior-Mid) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Pune, Maharashtra, India</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
